--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "bootstrap": "^4.0.0",
     "jquery": "^3.3.1",
     "jquery-validation": "^1.17.0",
+    "js-cookie": "^2.2.0",
     "malihu-custom-scrollbar-plugin": "^3.1.5",
     "popper.js": "^1.12.9",
+    "vee-validate": "^2.0.8",
     "vue": "^2.5.2",
     "vue-extend-layout": "^1.0.1",
     "vue-meta": "^1.4.3",
