--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "vue-meta": "^1.4.3",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
+    "vuex-persist": "^1.2.2",
+    "vuex-persistedstate": "^2.5.2",
     "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
