--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "popper.js": "^1.12.9",
     "vee-validate": "^2.0.8",
     "vue": "^2.5.2",
+    "vue-content-loader": "^0.2.1",
     "vue-extend-layout": "^1.0.1",
     "vue-meta": "^1.4.3",
     "vue-router": "^3.0.1",
+    "vue-toastr": "^2.0.14",
     "vuex": "^3.0.1",
     "vuex-persist": "^1.2.2",
     "vuex-persistedstate": "^2.5.2",
