--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "popper.js": "^1.12.9",
     "vee-validate": "^2.0.8",
     "vue": "^2.5.2",
+    "vue-auth-image": "^0.0.2",
     "vue-content-loader": "^0.2.1",
     "vue-extend-layout": "^1.0.1",
     "vue-meta": "^1.4.3",
