--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "vee-validate": "^2.0.8",
     "vue": "^2.5.2",
     "vue-auth-image": "^0.0.2",
+    "vue-bootstrap-datetime-picker": "^1.0.4",
     "vue-content-loader": "^0.2.1",
     "vue-extend-layout": "^1.0.1",
     "vue-meta": "^1.4.3",
     "vue-router": "^3.0.1",
     "vue-toastr": "^2.0.14",
+    "vue2-datepicker": "^1.9.7",
     "vuex": "^3.0.1",
     "vuex-persist": "^1.2.2",
     "vuex-persistedstate": "^2.5.2",
